# alignment_poc

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml
integration_test/: simple_test.dart
lib/: main.dart  test_cases.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: alignment.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: alignment.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/linux/: CMakeLists.txt
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt  installer.iss
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
