[package]
name = "rust_lib_alignment_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.9", features = ["ndarray"] } # ONNX Runtime
tokenizers = "0.19.1"
ndarray = "0.17.2"
flutter_rust_bridge = "=2.12.0"
lazy_static = "1.5.0"

[lib]
crate-type = ["cdylib", "staticlib"]
